--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,8 @@
            name="name" />
     <input type="email"
            name="email" />
+    <input type="text"
+           name="subject" />
     <textarea name="message"></textarea>
   </form>
   <noscript>You need to enable JavaScript to run this app.</noscript>
