--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       <meta name="theme-color"
             content="#000000" />
       <meta name="url-image"
-            propperty="og:image"
+            property="og:image"
             content="%PUBLIC_URL%/Arafat_Islam_Portfolio.png " />
       <meta name="description"
             content="Arafat Islam Portfolio" />
