--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,17 @@
             content="width=device-width, initial-scale=1" />
       <meta name="theme-color"
             content="#000000" />
-      <meta name="url-image"
-            property="og:image"
-            content="%PUBLIC_URL%/Arafat_Islam_Portfolio.png " />
+      <meta property="og:url"
+            content="https://www.arafatislam.com/">
+      <meta property="og:type"
+            content="website">
+      <meta property="og:title"
+            content="Arafat Islam">
+      <meta property="og:description"
+            content="Arafat Islam Portfolio">
+      <meta property="og:image"
+            content="/Arafat_Islam_Portfolio.png ">
+
       <meta name="description"
             content="Arafat Islam Portfolio" />
       <link rel="apple-touch-icon"
